--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   "author": "Dearie-de-cybek",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongodb": "^6.11.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "properties-reader": "^2.3.0"
   }
 }
